<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/name_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hintName"
            android:inputType="textCapWords" />


        <TextView
            style="@style/CafeStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chocolate" />

        <TextView
            style="@style/CafeStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnDecrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnIncrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/order_summary"
            style="@style/CafeStyle" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />


    </LinearLayout>

</ScrollView>